Closed Bug 1555379 Opened 5 years ago Closed 5 years ago

Web Render does not collect content paint payloads

Categories

(Core :: Graphics: WebRender, defect)

68 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox69 --- fixed

People

(Reporter: barret, Assigned: barret)

References

Details

Attachments

(2 files)

Web Render does not generate CompositionPayloads corresponding to contentful paints (such as here) and so they will not be recorded in Gecko profiles.

Assignee: nobody → brennie
Status: NEW → ASSIGNED

The WebRenderBridgeChild now records whether or not it was painting content
while sending display lists to the WebRenderBridgeParent, allowing for
composition times to be recorded for WebRender.

Pushed by brennie@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/20ee2411c2c4
Document the various CompositionPayloadTypes r=bas
https://hg.mozilla.org/integration/autoland/rev/ab8b7c6960e5
Record content paint times for WebRender r=kats
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: